--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -10,7 +10,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn nói với",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn nói",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thế giới",
         "ar":"",
         "it":"",
         "pl":"",
@@ -82,7 +82,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thông báo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -100,7 +100,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nói riêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -118,7 +118,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bang hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -136,7 +136,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -154,7 +154,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hệ thống",
         "ar":"",
         "it":"",
         "pl":"",
@@ -172,7 +172,7 @@
         "de":"LP",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Máu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -190,7 +190,7 @@
         "de":"MP",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mana",
         "ar":"",
         "it":"",
         "pl":"",
@@ -208,7 +208,7 @@
         "de":"EXP",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kinh nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -226,7 +226,7 @@
         "de":"Geschw.",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tốc độ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Công",
         "ar":"",
         "it":"",
         "pl":"",
@@ -262,7 +262,7 @@
         "de":"ANG",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"ATK",
         "ar":"",
         "it":"",
         "pl":"",
@@ -280,7 +280,7 @@
         "de":"VER",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -298,7 +298,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"DEF",
         "ar":"",
         "it":"",
         "pl":"",
@@ -316,7 +316,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng sát thương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"ENHC DMG",
         "ar":"",
         "it":"",
         "pl":"",
@@ -352,7 +352,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giảm sát thương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -370,7 +370,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"DMG RD",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tốc độ đánh ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -406,7 +406,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"ATK SPD",
         "ar":"",
         "it":"",
         "pl":"",
@@ -424,7 +424,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -442,7 +442,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Skill ENHC",
         "ar":"",
         "it":"",
         "pl":"",
@@ -460,7 +460,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chính xác",
         "ar":"",
         "it":"",
         "pl":"",
@@ -478,7 +478,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"ACC",
         "ar":"",
         "it":"",
         "pl":"",
@@ -496,7 +496,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỹ chuẩn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -514,7 +514,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Skill ACC",
         "ar":"",
         "it":"",
         "pl":"",
@@ -532,7 +532,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Né Tránh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -550,7 +550,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"EVA",
         "ar":"",
         "it":"",
         "pl":"",
@@ -568,7 +568,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỹ né",
         "ar":"",
         "it":"",
         "pl":"",
@@ -604,7 +604,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạo chuẩn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -622,7 +622,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"CRIT ACC",
         "ar":"",
         "it":"",
         "pl":"",
@@ -640,7 +640,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỹ bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Skill CRIT ACC",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tránh bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -694,7 +694,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"CRIT EVA",
         "ar":"",
         "it":"",
         "pl":"",
@@ -712,7 +712,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tránh kỹ bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -730,7 +730,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Skill CRIT EVA",
         "ar":"",
         "it":"",
         "pl":"",
@@ -748,7 +748,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng bạo kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -766,7 +766,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"CRIT ENCH",
         "ar":"",
         "it":"",
         "pl":"",
@@ -784,7 +784,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng kỹ bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -802,7 +802,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Skill CRIT ENCH",
         "ar":"",
         "it":"",
         "pl":"",
@@ -820,7 +820,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giảm bạo kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -838,7 +838,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"CRIT RD",
         "ar":"",
         "it":"",
         "pl":"",
@@ -856,7 +856,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giảm kỹ bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -874,7 +874,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Skill CRIT RD",
         "ar":"",
         "it":"",
         "pl":"",
@@ -892,7 +892,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thăng hoa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -910,7 +910,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thăng hoa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -928,7 +928,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"May mắn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -946,7 +946,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"May mắn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -964,7 +964,7 @@
         "de":"Quests",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhiệm vụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -982,7 +982,7 @@
         "de":"Wachstum",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tiến Trình",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1000,7 +1000,7 @@
         "de":"Verfügbar",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Có thể nhận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1018,7 +1018,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mục tiêu nhiệm vụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1036,7 +1036,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phần thưởng nhiệm vụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1054,7 +1054,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mô tả nhiệm vụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1072,7 +1072,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàn thành",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1090,7 +1090,7 @@
         "de":"Hauptquest",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhiệm vụ chính ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1108,7 +1108,7 @@
         "de":"Zweitquests",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhiệm vụ phụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1126,7 +1126,7 @@
         "de":"Talentquest",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhiệm vụ thiên phú",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1144,7 +1144,7 @@
         "de":"Tägliches Quest",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhiệm vụ hàng ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1162,7 +1162,7 @@
         "de":"Gildenquest",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhiệm vụ Bang hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1180,7 +1180,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhân vật",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1198,7 +1198,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang bị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1216,7 +1216,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ban phước",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1234,7 +1234,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến thần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1252,7 +1252,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên tố ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1270,7 +1270,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Túi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1288,7 +1288,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tất cả",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1306,7 +1306,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang bị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1324,7 +1324,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thuốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1342,7 +1342,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vật liệu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1360,7 +1360,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"T.Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1378,7 +1378,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nh.Vụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1396,7 +1396,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khác",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1414,7 +1414,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dung lượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1432,7 +1432,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sắp xếp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1450,7 +1450,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tách",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1468,7 +1468,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1486,7 +1486,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1504,7 +1504,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bày bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1522,7 +1522,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nạp tiền",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1540,7 +1540,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Khóa]",
         "ar":"",
         "it":"",
         "pl":"",
