--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10,7 +10,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nón",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giáp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Găng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vũ khí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -82,7 +82,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -100,7 +100,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dây chuyền",
         "ar":"",
         "it":"",
         "pl":"",
@@ -118,7 +118,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhẫn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -136,7 +136,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đai lưng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -154,7 +154,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo choàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -172,7 +172,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thú cưỡi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -190,7 +190,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tinh linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -208,7 +208,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sách",
         "ar":"",
         "it":"",
         "pl":"",
@@ -226,7 +226,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sách tinh linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thuốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -262,7 +262,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -280,7 +280,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -298,7 +298,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tóc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -316,7 +316,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phù",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Linh tinh",
         "ar":"",
         "it":"",
         "pl":"",
