--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10,7 +10,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nón",
         "ar":"",
         "it":"",
         "pl":"",
