JA to JP correction

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -8,9 +8,9 @@
         "ru":"Вы говорите с %s",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
-        "vi":"Bạn nói với",
+        "vi":"Bạn nói với %s",
         "ar":"",
         "it":"",
         "pl":"",
@@ -26,9 +26,9 @@
         "ru":"%s говорит",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
-        "vi":"Bạn nói",
+        "vi":"%s Bạn nói",
         "ar":"",
         "it":"",
         "pl":"",
@@ -44,7 +44,7 @@
         "ru":"Локальный",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Khu",
         "ar":"",
@@ -62,7 +62,7 @@
         "ru":"Мировой",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Thế giới",
         "ar":"",
@@ -80,7 +80,7 @@
         "ru":"Уведомления",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Thông báo",
         "ar":"",
@@ -98,7 +98,7 @@
         "ru":"Личный",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nói riêng",
         "ar":"",
@@ -116,7 +116,7 @@
         "ru":"Гильдия",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Bang hội",
         "ar":"",
@@ -134,7 +134,7 @@
         "ru":"Группа",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Đội",
         "ar":"",
@@ -152,7 +152,7 @@
         "ru":"Система",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Hệ thống",
         "ar":"",
@@ -170,7 +170,7 @@
         "ru":"Жизни",
         "tr":"",
         "de":"LP",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Máu",
         "ar":"",
@@ -188,7 +188,7 @@
         "ru":"Мана",
         "tr":"",
         "de":"MP",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Mana",
         "ar":"",
@@ -206,7 +206,7 @@
         "ru":"ОПТ",
         "tr":"",
         "de":"EXP",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Kinh nghiệm",
         "ar":"",
@@ -224,7 +224,7 @@
         "ru":"Скорость",
         "tr":"",
         "de":"Geschw.",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tốc độ",
         "ar":"",
@@ -242,7 +242,7 @@
         "ru":"Атака",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Công",
         "ar":"",
@@ -260,7 +260,7 @@
         "ru":"АТК",
         "tr":"",
         "de":"ANG",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"ATK",
         "ar":"",
@@ -278,7 +278,7 @@
         "ru":"Защита",
         "tr":"",
         "de":"VER",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Thủ",
         "ar":"",
@@ -296,7 +296,7 @@
         "ru":"ЗЩТ",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"DEF",
         "ar":"",
@@ -314,7 +314,7 @@
         "ru":"Повышенный Урон",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tăng sát thương",
         "ar":"",
@@ -332,7 +332,7 @@
         "ru":"ПВШ УРН",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"ENHC DMG",
         "ar":"",
@@ -350,7 +350,7 @@
         "ru":"Снижение урона",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Giảm sát thương",
         "ar":"",
@@ -368,7 +368,7 @@
         "ru":"СНЖ УРН",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"DMG RD",
         "ar":"",
@@ -386,7 +386,7 @@
         "ru":"Скорость атаки",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tốc độ đánh ",
         "ar":"",
@@ -404,7 +404,7 @@
         "ru":"СКР АТК",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"ATK SPD",
         "ar":"",
@@ -422,7 +422,7 @@
         "ru":"Повышение навыка",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Điểm kỹ năng",
         "ar":"",
@@ -440,7 +440,7 @@
         "ru":"ПВШ НВК",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Skill ENHC",
         "ar":"",
@@ -458,7 +458,7 @@
         "ru":"Точность",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Chính xác",
         "ar":"",
@@ -476,7 +476,7 @@
         "ru":"ТЧН",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"ACC",
         "ar":"",
@@ -494,7 +494,7 @@
         "ru":"Точность Навыка",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Kỹ chuẩn",
         "ar":"",
@@ -512,7 +512,7 @@
         "ru":"ТЧН НВК",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Skill ACC",
         "ar":"",
@@ -530,7 +530,7 @@
         "ru":"",
         "tr":"Уклонение",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Né Tránh",
         "ar":"",
@@ -548,7 +548,7 @@
         "ru":"УКЛ",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"EVA",
         "ar":"",
@@ -566,7 +566,7 @@
         "ru":"",
         "tr":"Уклониене от навыка",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Kỹ né",
         "ar":"",
@@ -584,7 +584,7 @@
         "ru":"УКЛ НВК",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"",
         "ar":"",
@@ -602,7 +602,7 @@
         "ru":"Точность крита",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Bạo chuẩn",
         "ar":"",
@@ -620,7 +620,7 @@
         "ru":"ТЧН КРИТ",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"CRIT ACC",
         "ar":"",
@@ -638,7 +638,7 @@
         "ru":"Точность Крита Навыка",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Kỹ bạo",
         "ar":"",
@@ -656,7 +656,7 @@
         "ru":"ТЧН КРИТ НВК",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Skill CRIT ACC",
         "ar":"",
@@ -674,7 +674,7 @@
         "ru":"Уклонение от крита",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tránh bạo",
         "ar":"",
@@ -692,7 +692,7 @@
         "ru":"КРИТ УКЛ",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"CRIT EVA",
         "ar":"",
@@ -710,7 +710,7 @@
         "ru":"Уклонение от Крита Навыка",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tránh kỹ bạo",
         "ar":"",
@@ -728,7 +728,7 @@
         "ru":"УКЛ КРИТ НВК",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Skill CRIT EVA",
         "ar":"",
@@ -746,7 +746,7 @@
         "ru":"Усиление Крита",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tăng bạo kích",
         "ar":"",
@@ -764,7 +764,7 @@
         "ru":"УСИЛ КРИТ",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"CRIT ENCH",
         "ar":"",
@@ -782,7 +782,7 @@
         "ru":"Повышение критического уровня навыков",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tăng kỹ bạo",
         "ar":"",
@@ -800,7 +800,7 @@
         "ru":"ПОВЫШ КРИТ НВК",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Skill CRIT ENCH",
         "ar":"",
@@ -818,7 +818,7 @@
         "ru":"Снижение критического урона",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Giảm bạo kích",
         "ar":"",
@@ -836,7 +836,7 @@
         "ru":"СНИЖ КРИТ",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"CRIT RD",
         "ar":"",
@@ -854,7 +854,7 @@
         "ru":"Снижение критического урона",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Giảm kỹ bạo",
         "ar":"",
@@ -872,7 +872,7 @@
         "ru":"НВК КРИТ СНИЖ",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Skill CRIT RD",
         "ar":"",
@@ -890,7 +890,7 @@
         "ru":"Священная атака",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Thăng hoa",
         "ar":"",
@@ -908,7 +908,7 @@
         "ru":"СВЯЩ АТК",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Thăng hoa",
         "ar":"",
@@ -926,7 +926,7 @@
         "ru":"Удача",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"May mắn",
         "ar":"",
@@ -944,7 +944,7 @@
         "ru":"УДАЧА",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"May mắn",
         "ar":"",
@@ -962,7 +962,7 @@
         "ru":"",
         "tr":"",
         "de":"Quests",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nhiệm vụ",
         "ar":"",
@@ -980,7 +980,7 @@
         "ru":"",
         "tr":"",
         "de":"Wachstum",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tiến Trình",
         "ar":"",
@@ -998,7 +998,7 @@
         "ru":"",
         "tr":"",
         "de":"Verfügbar",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Có thể nhận",
         "ar":"",
@@ -1016,7 +1016,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Mục tiêu nhiệm vụ",
         "ar":"",
@@ -1034,7 +1034,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Phần thưởng nhiệm vụ",
         "ar":"",
@@ -1052,7 +1052,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Mô tả nhiệm vụ",
         "ar":"",
@@ -1070,7 +1070,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Hoàn thành",
         "ar":"",
@@ -1088,7 +1088,7 @@
         "ru":"",
         "tr":"",
         "de":"Hauptquest",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nhiệm vụ chính ",
         "ar":"",
@@ -1106,7 +1106,7 @@
         "ru":"",
         "tr":"",
         "de":"Zweitquests",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nhiệm vụ phụ",
         "ar":"",
@@ -1124,7 +1124,7 @@
         "ru":"",
         "tr":"",
         "de":"Talentquest",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nhiệm vụ thiên phú",
         "ar":"",
@@ -1142,7 +1142,7 @@
         "ru":"",
         "tr":"",
         "de":"Tägliches Quest",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nhiệm vụ hàng ngày",
         "ar":"",
@@ -1160,7 +1160,7 @@
         "ru":"",
         "tr":"",
         "de":"Gildenquest",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nhiệm vụ Bang hội",
         "ar":"",
@@ -1178,7 +1178,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nhân vật",
         "ar":"",
@@ -1196,7 +1196,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Trang bị",
         "ar":"",
@@ -1214,7 +1214,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Ban phước",
         "ar":"",
@@ -1232,7 +1232,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Chiến thần",
         "ar":"",
@@ -1250,7 +1250,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nguyên tố ",
         "ar":"",
@@ -1268,7 +1268,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Túi",
         "ar":"",
@@ -1286,7 +1286,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tất cả",
         "ar":"",
@@ -1304,7 +1304,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Trang bị",
         "ar":"",
@@ -1322,7 +1322,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Thuốc",
         "ar":"",
@@ -1340,7 +1340,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Vật liệu",
         "ar":"",
@@ -1358,7 +1358,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"T.Linh",
         "ar":"",
@@ -1376,7 +1376,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nh.Vụ",
         "ar":"",
@@ -1394,7 +1394,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Khác",
         "ar":"",
@@ -1412,7 +1412,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Dung lượng",
         "ar":"",
@@ -1430,7 +1430,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Sắp xếp",
         "ar":"",
@@ -1448,7 +1448,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Tách",
         "ar":"",
@@ -1466,7 +1466,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Cường",
         "ar":"",
@@ -1484,7 +1484,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Bán",
         "ar":"",
@@ -1502,7 +1502,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Bày bán",
         "ar":"",
@@ -1520,7 +1520,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"Nạp tiền",
         "ar":"",
@@ -1538,7 +1538,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "ja":"",
+        "jp":"",
         "pt":"",
         "vi":"[Khóa]",
         "ar":"",
