--- a/Translation/item.json
+++ b/Translation/item.json
@@ -316,7 +316,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Phù",
+        "vi":"Nhiệm vụ",
         "ar":"",
         "it":"",
         "pl":"",
