--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -28,7 +28,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"%s Bạn nói",
+        "vi":"%s nói",
         "ar":"",
         "it":"",
         "pl":"",
@@ -118,7 +118,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bang hội",
+        "vi":"Bang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -892,7 +892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thăng hoa",
+        "vi":"Thần Công",
         "ar":"",
         "it":"",
         "pl":"",
@@ -910,7 +910,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thăng hoa",
+        "vi":"Thần công",
         "ar":"",
         "it":"",
         "pl":"",
