--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -10,7 +10,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Gear Position",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Required Class",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Required Gender",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Required Lv",
         "ar":"",
         "it":"",
         "pl":"",
