--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1546,5 +1546,59 @@
         "pl":"",
         "th":"",
         "id":"[Terkunci]"
+    },
+	"UI.windows.revive.manual":{
+        "en":"Manual",
+        "fr":"Manuel",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"UI.windows.revive.gold":{
+        "en":"Gold",
+        "fr":"Or",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"UI.windows.revive.item":{
+        "en":"Item",
+        "fr":"Objet",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
