--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1547,7 +1547,7 @@
         "th":"",
         "id":"[Terkunci]"
     },
-	"UI.windows.revive.manual":{
+	"UI.windows.revive.normal":{
         "en":"Manual",
         "fr":"Manuel",
         "es":"",
