--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1558,7 +1558,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thủ Công",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1576,7 +1576,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1594,7 +1594,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vật Phẩm",
         "ar":"",
         "it":"",
         "pl":"",
