--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -10,7 +10,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang bị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vai trò",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giới tính",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Yêu cầu Lv",
         "ar":"",
         "it":"",
         "pl":"",
