--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -604,7 +604,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngàn hơi băng",
+        "vi":"Gầm băng giá",
         "ar":"",
         "it":"",
         "pl":"",
