--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1600,5 +1600,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+	"UI.windows.minimap.line":{
+        "en":"Ln",
+        "fr":"Ln",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
